--- a/Forelesning 6/Oppgave 3/src/index.html
+++ b/Forelesning 6/Oppgave 3/src/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="./styles.css">
-    </head>
-    <body>
-        <div class="grid-container">
-            <!-- Now build the grid you self-->
-            <div class="grid-item"> Header </div>
-            <div class="grid-item"> Sidebar </div>
-            <div class="grid-item">
-                <p>Content</p>
-                <p>
-                    More content than we had before
-                    so this column is quite tall
-                </p>
-            </div>
-            <div class="grid-item"> Sidebar 2</div>
-            <div class="grid-item"> Footer </div>
-        </div>
-        <script src="./script.js"></script>
-    </body>
+  <head>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div class="grid-container">
+      <!-- Now build the grid you self-->
+      <div class="grid-item footandhead">Header</div>
+      <div class="grid-item side1andcont" id="sidebar1">Sidebar</div>
+      <div class="grid-item side1andcont" id="content">
+        <p>Content</p>
+        <p>More content than we had before so this column is quite tall</p>
+      </div>
+      <div class="grid-item side2">Sidebar 2</div>
+      <div class="grid-item footandhead">Footer</div>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
